--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <main class="page">
         <div class="home">
             <div class="home__content">
-                <div class="home__name">$POUTSOS</div>
-                <div class="home__title"><span>P</span><span>O</span><span>U</span><span>T</span><span>S</span><span>O</span></div>
-                <div class="home__title"><span>S</span><span></span><span></span></div>
+                <div class="home__name">$BILLI</div>
+                <div class="home__title"><span>C</span><span>H</span><span>I</span><span>N</span><span>E</span><span>S</span><span>E</span></div>
+                <div class="home__title"><span>B</span><span>I</span><span>L</span><span>L</span><span>Y</span></div>
                 <br><br>
-                <div class="home__ca">CA: <br>DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump</div>
-                <div class="home__buy"><a href="https://raydium.io/swap/?inputMint=sol&amp;outputMint=DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump" target="_blank">Buy</a></div>
+                <div class="home__ca">CA: <br>HLbBEBUXCy8wq6v6R1oLj6UEtYYK9bj2F7TZNQbKpump</div>
+                <div class="home__buy"><a href="https://raydium.io/swap/?utm_source=phantom&utm_medium=list&inputMint=sol&outputMint=HLbBEBUXCy8wq6v6R1oLj6UEtYYK9bj2F7TZNQbKpump" target="_blank">Buy</a></div>
                 <br><br>
                 <div class="home__soocial">
-                    <a href="https://x.com/solanapickle" target="_blank"><img src="images/x.png" alt=""></a>
-                    <a href="https://t.me/picklesolanaportal" target="_blank"><img src="images/tg.png" alt=""></a>
-                    <a href="https://dexscreener.com/solana/DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump" target="_blank"><img src="images/dexscreener.png" alt="#"></a>
-                    <a href="https://www.dextools.io/app/en/solana/pair-explorer/DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump?t=1719897737150" target="_blank"><img src="images/dextools.png" alt=""></a>
+                    <a href="https://x.com/billicoinsolana/status/1809635163858702632?s=46" target="_blank"><img src="images/x.png" alt=""></a>
+                    <a href="https://t.me/BilliCoinSolana" target="_blank"><img src="images/tg.png" alt=""></a>
+                    <a href="https://dexscreener.com/solana/a79vgyu2cjenm8dlvas98cn2tvqefgcyuvnxghqmyyj7" target="_blank"><img src="images/dexscreener.png" alt="#"></a>
+                    <a href="https://www.dextools.io/app/en/solana/pair-explorer/A79VGYU2CJenm8DLVAS98cN2tVqEfGcYUvnXGHqMYYJ7?t=1720286583030" target="_blank"><img src="images/dextools.png" alt=""></a>
                 </div>
                 <br><br>
-                <div class="home__text" data-da=".picle,998,first"><p>$PICKLE is a unique memecoin inspired by Matt Furie's iconic "Boys' Club" comic.</p>
+                <div class="home__text" data-da=".picle,998,first"><p>BILLY JUST CAME TO CHINA</p>
 
                     <p>Tokenomics<br><br>
                         <small>Supply: 1,000,000,000</small><br>
@@ -40,12 +40,12 @@
         </div>
         <div class="picle">
             <div class="picle__img"><img src="images/img.png" alt=""></div>
-            <div class="picle__ca">CA: <br>DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump</div>
+            <div class="picle__ca">CA: <br>HLbBEBUXCy8wq6v6R1oLj6UEtYYK9bj2F7TZNQbKpump</div>
             <div class="picle__soocial">
-                <a href="https://x.com/solanapickle" target="_blank"><img src="images/x.png" alt=""></a>
-                <a href="https://t.me/picklesolanaportal" target="_blank"><img src="images/tg.png" alt=""></a>
-                <a href="https://dexscreener.com/solana/DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump" target="_blank"><img src="images/dexscreener.png" alt=""></a>
-                <a href="https://www.dextools.io/app/en/solana/pair-explorer/DAHDMPXucK8pBweELPTnvkTbTaQXsvFRhTwdHrQbpump?t=1719897737150" target="_blank"><img src="images/dextools.png" alt=""></a>
+                <a href="https://x.com/billicoinsolana/status/1809635163858702632?s=46" target="_blank"><img src="images/x.png" alt=""></a>
+                <a href="https://t.me/BilliCoinSolana" target="_blank"><img src="images/tg.png" alt=""></a>
+                <a href="https://dexscreener.com/solana/a79vgyu2cjenm8dlvas98cn2tvqefgcyuvnxghqmyyj7" target="_blank"><img src="images/dexscreener.png" alt=""></a>
+                <a href="https://www.dextools.io/app/en/solana/pair-explorer/A79VGYU2CJenm8DLVAS98cN2tVqEfGcYUvnXGHqMYYJ7?t=1720286583030" target="_blank"><img src="images/dextools.png" alt=""></a>
             </div>
         </div>
     </main>
