--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en" class="_webp"><!-- Mirrored from pickle.meme/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Jul 2024 17:34:56 GMT --><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>$PICKLE</title>
+    <title>$BILLI</title>
     <link rel="canonical" href="http://picklecto.com/">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.min.css">
